; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_cs35l35.c_cs35l35_reset.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_cs35l35.c_cs35l35_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs35l35_private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cs35l35_private*)* @cs35l35_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cs35l35_reset(%struct.cs35l35_private* %0) #0 {
  %2 = alloca %struct.cs35l35_private*, align 8
  store %struct.cs35l35_private* %0, %struct.cs35l35_private** %2, align 8
  %3 = load %struct.cs35l35_private*, %struct.cs35l35_private** %2, align 8
  %4 = getelementptr inbounds %struct.cs35l35_private, %struct.cs35l35_private* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @gpiod_set_value_cansleep(i32 %5, i32 0)
  %7 = call i32 @usleep_range(i32 2000, i32 2100)
  %8 = load %struct.cs35l35_private*, %struct.cs35l35_private** %2, align 8
  %9 = getelementptr inbounds %struct.cs35l35_private, %struct.cs35l35_private* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @gpiod_set_value_cansleep(i32 %10, i32 1)
  %12 = call i32 @usleep_range(i32 1000, i32 1100)
  ret void
}

declare dso_local i32 @gpiod_set_value_cansleep(i32, i32) #1

declare dso_local i32 @usleep_range(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
